# MsiDump

./: .clang-format  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CUnknown.h  DragDrop.cpp  DragDrop.h  History.txt  LICENSE  LICENSE.md  MainFrame.h  Makefile  MsiDump.cpp  MsiDump.sln  MsiDump.vcproj  MsiDumpCab.vcproj  MsiDumpPublic.h  MsiTable.cpp  MsiTable.h  MsiUtils.cpp  MsiUtils.h  README.md  Readme.build.txt  Readme.txt  Resource.h  dirs  format-code.cmd  parseArgs.cpp  parseArgs.h  precomp.h  sources  sources.gui  sources.inc  srcindex.cmd  tools.cmd  ui.cpp  ui.h  ui.rc  (+3 more)
console/: CMakeLists.txt  MsiDump.cpp  MsiDump.vcxproj  MsiDump.vcxproj.filters  ParseArgs.cpp  ParseArgs.h  parseArgs.cpp  parseArgs.h  precomp.h  sources
gui/: AboutDlg.h  CMakeLists.txt  CUnknown.h  DragDrop.cpp  DragDrop.h  MainFrame.cpp  MainFrame.h  MainFrame.rc  MsiDumpCab.exe.manifest  MsiDumpCab.vcxproj  Resource.h  precomp.h  sources  ui.cpp  ui.h  ui.rc
inc/: MsiDumpPublic.h
lib/: CMakeLists.txt  CommonLib.vcxproj  MsiTable.cpp  MsiTable.h  MsiUtils.cpp  MsiUtils.h  precomp.h  sources
msbuild/: common.build.post.props  common.build.pre.props  common.build.version.props  common.cpp.post.props  common.cpp.pre.props  user.cpp.pre.props
test/: CMakeLists.txt  MsiDumpTest.cpp  MsiDumpTest.vcxproj  MsiDumpTest.vcxproj.filters  precomp.h  sources
test/data/: test.msi
test/data/in/: test.wix
